initial actual html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Hello, world!</title>
+  <title>Reza Bolhasani</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="Reza Bolhasani" content="" />
+  
 </head>
 <body>
   <h1>Reza Bolhasani</h1>
