showing off my css skills

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Reza Bolhasani</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  
+  <style> 
+  </style> 
 </head>
+
 <body>
-  <h1>Reza Bolhasani</h1>
+  <center>
+    <h1>REZA BOLHASANI</h1>
+  </center>
 </body>
+
 </html>
